# Notes_Collector

./: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  Note.cpp  Note.h  NotesCollection.cpp  NotesCollection.h  Observer.h  README.md  Subject.h  main.cpp
Test/: CMakeLists.txt  ControlPanelTest.cpp  NoteTest.cpp  NotesCollectionTest.cpp  runAllTest.cpp
